gen/oauth/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-oauth1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/oauth/v1/lib)
error[E0423]: expected value, found struct `v_2::V2Actions`
   --> gen/oauth/v1/lib/src/lib.rs:222:13
    |
222 |             v_2::V2Actions
    |             ^^^^^^^^^^^^^^ did you mean `v_2::V2Actions { /* fields */ }`?

error[E0423]: expected value, found struct `me::MeActions`
   --> gen/oauth/v1/lib/src/lib.rs:331:17
    |
331 |                 me::MeActions
    |                 ^^^^^^^^^^^^^ did you mean `me::MeActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-oauth1`.

To learn more, run the command again with --verbose.
